--- a/lesson1/starter_code/cookie_recipe/index.html
+++ b/lesson1/starter_code/cookie_recipe/index.html
@@ -1,83 +1,68 @@
-﻿The Best Chocolate Chip Cookies
+﻿<!doctype html>
+<html>
+	<head>
+		<title>cookie</title>
+	</head>
+	<body>
+		<h1>The Best Chocolate Chip Cookies</h1>
+		<img src="cookies.jpg" width="200px">
+		<p>Recipe by: Bonnie Owens.</p>
+		<p>RELATED RECIPES</p>
 
-cookies.jpg <!--hint: <img> tag, this is a bonus-->
+		<ul>
+			<li>Amazing Chocolate Chip Cookies!</li>
+			<li>Beer and Pretzel Chocolate Chip Cookies</li>
+			<li>Bisquick® Chocolate Chip Cookies</li>
+			<li>Browned Butter and Coconut Chocolate Chip Cookies</li>
+			<li>Buttery Chocolate Chip Cookies</li>
+			<li>Cherry Chocolate Chip Cookies</li>
+		</ul>
 
-Recipe by: Bonnie Owens
+		<p>PREP TIME:</p><p>45 Min</p>
+		<p>TOTAL TIME:</p><p>45 Min</p>
+		<p>SERVING:S</p><p>A LOT</p>
 
-RELATED RECIPES
-
-Amazing Chocolate Chip Cookies!
-  
-Beer and Pretzel Chocolate Chip Cookies
- 
-Bisquick® Chocolate Chip Cookies
-  
-Browned Butter and Coconut Chocolate Chip Cookies
- 
-Buttery Chocolate Chip Cookies
-  
-Cherry Chocolate Chip Cookies
-
-
-PREP TIME
-45 Min
-
-TOTAL TIME
-45 Min
-
-SERVINGS
-A LOT
-
-INGREDIENTS
-1 1/2 cup (3 sticks) butter, softened
-	1 cup brown sugar
-	1 cup granulated sugar
-	1 Tbl vanilla instant pudding powder
-	2 Tbl milk
-	2 Tbl vanilla extract
-	2 eggs
-	4 cups all purpose flour
-	2 tsp baking soda
-	1/2 tsp salt
-	4 cups chocolate chips
-	1 cup chopped walnuts or pecans(optional)
+	<h2>INGREDIENTS</h2>
+		<ul>
+			<li>1 1/2 cup (3 sticks) butter, softened</li>
+			<li>1 cup brown sugar</li>
+			<li>1 cup granulated sugar</li>
+			<li>1 Tbl vanilla instant pudding powder</li>
+			<li>2 Tbl milk</li>
+			<li>2 Tbl vanilla extract</li>
+			<li>2 eggs</li>
+			<li>4 cups all purpose flour</li>
+			<li>2 tsp baking soda</li>
+			<li>1/2 tsp salt</li>
+			<li>4 cups chocolate chips</li>
+			<li>1 cup chopped walnuts or pecans(optional)</li>
+		</ul>
 
 
-How to make Mama’s Recipe: The Best Chocolate Chip Cookies
+	<h3><i>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</i></h3>
+		<ol>
+			<li>Preheat oven to 350 degrees</li>
+			<li>Beat butter and sugars together until light and fluffy</li>
+			<li>Stir in pudding mix milk and vanilla extract.</li>
+			<li>Beat in eggs.</li>
+			<li>Add dry ingredients and stir until combined.</li>
+			<li>Stir in chocolate chips and nuts.</li>
+			<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+			<li>Bake 8-10 minutes or until golden brown.</li>
+		</ol>
 
 
-	Preheat oven to 350 degrees
-
-	Beat butter and sugars together until light and fluffy
-
-	Stir in pudding mix milk and vanilla extract.
-
-	Beat in eggs.
-
-	Add dry ingredients and stir until combined.
-
-	Stir in chocolate chips and nuts.
-
-	Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.
-
-	Bake 8-10 minutes or until golden brown.
+	<h2>EXPERT TIPS</h2>
+		<ul>
+			<li>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.</li>
+			<li>If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!</li>
+			<li>Got questions? Our experts have the answers. me@fakeemail.com Email Me</li>
+		</ul>
 
 
-EXPERT TIPS
+	<h2>NUTRITION INFORMATION</h2>
+		<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>		
 
-
-Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.
-
-If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!
-
-Got questions? Our experts have the answers. me@fakeemail.com Email Me
-
-
-NUTRITION INFORMATION
-
-Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
-
-
-This recipe was altered from Open Source Recipe "http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">for more recipes go here.
-
+<p><i>This recipe was altered from Open Source Recipe "http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">for more recipes go here.
+	</body>
 </html>
