--- a/homework/week1/resume/index.html
+++ b/homework/week1/resume/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Resume Website</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Wendy Bite's Resume</title>
 </head>
 <body>
-<p>This is to show that it works!</p>
+	<h1>Wendy G. Bite</h1>
+	<p>About Me | <a href="resume.html" title="">Resume</a></p>
+	<hr>
+	<p>The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.</p>
+
+	<p>Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!</p>
+	
 </body>
 </html>
