Homework - Fashion blog part II - Pre-floats

--- a/homework/Week2/fashion_blog_part1/index.html
+++ b/homework/Week2/fashion_blog_part1/index.html
@@ -42,6 +42,34 @@
 
 		<hr>
 
+		<aside class="aboutus">
+			<h5>About us</h5>
+			<p> Sartre's List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro distrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor West Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level. 
+			</p>
+			<a class="more" href="#">More...</a>
+		</aside>
+
+		<hr>
+
+		<div id="box">Ad</div>
+
+		<hr>
+
+		<aside class="popularposts">
+			<h5>Popular Posts</h5>
+			<ul>
+				<li><a href="#">10 Things Not to Wear on the Red Carpet</a></li>
+				<li><a href="#">Valhalla at The Met Gala</a></li>
+				<li><a href="#">Jeans: To Fray or Not to Fray</a></li>
+				<li><a href="#">"Trashion" is in This Season</a></li>
+				<li><a href="#">Back to School in Pencil Skirts</a></li>
+				<li><a href="#">Fall Season Preview</a></li>
+				<li><a href="#">Even More Ways to Wrap a Sari!</a></li>
+				<li><a href="#">Is Steam Punk Here to Stay?</a></li>
+				<li><a href="#">Neighborhoodie Watch</a></li>
+				<li><a href="#">Hair Styles of the Damned</a></li>
+			</ul>
+		</aside>
 
 
 
@@ -55,7 +83,7 @@
 				<li><a href="#">The Catwalk</a></li>
 				<li><a href="#">AdWatch</a></li>
 				<li><a href="#">About</a></li>
-				<li><a href="#">Tips</a></li>
+				<li class="last"><a href="#">Tips</a></li>
 			</ul>
 			</nav>
 			<p>&copy 2013 Valet Industries, Inc.</p>
