--- a/homework/Week2/fashion_blog_part1/index.html
+++ b/homework/Week2/fashion_blog_part1/index.html
@@ -22,42 +22,47 @@
 			</nav>
 		</header>
 
-		<article>
-			<h3>11/12/13</h3>
-			<h4><a href="#">On the Street in Brooklyn</a></h4>
-			<img src="https://github.com/szs/FEWD_HK_3/blob/gh-pages/lesson3/starter_code/fashion_blog_part1/fashion_photo.jpeg?raw=true">
-			<p>Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
-			<a class="next" href="#">Continues...</a>
-		</article>
+		<main>
 
-		<hr>
+			<article>
+				<h3>11/12/13</h3>
+				<h4><a href="#">On the Street in Brooklyn</a></h4>
+				<img src="https://github.com/szs/FEWD_HK_3/blob/gh-pages/lesson3/starter_code/fashion_blog_part1/fashion_photo.jpeg?raw=true">
+				<p>Cray culpa stumptown, flexitarian ex Odd Future do fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven’t heard of them High Life scenester. Vinyl fugiat High Life, kogi do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus Echo Park. Ugh consectetur farm-to-table forage, laboris blue bottle McSweeney’s tattooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro. Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
+				<a class="next" href="#">Continues...</a>
+			</article>
 
-		<article>
-			<h3>11/11/13</h3>
-			<h4><a href="#">Vintage in Vogue</a></h4>
-			<img src="https://github.com/szs/FEWD_HK_3/blob/gh-pages/lesson3/starter_code/fashion_blog_part1/fashion_photo2.jpeg?raw=true">
-			<p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
-			<a class="next" href="#">Continues...</a>
-		</article>
+			<hr>
 
-		<hr>
+			<article>
+				<h3>11/11/13</h3>
+				<h4><a href="#">Vintage in Vogue</a></h4>
+				<img src="https://github.com/szs/FEWD_HK_3/blob/gh-pages/lesson3/starter_code/fashion_blog_part1/fashion_photo2.jpeg?raw=true">
+				<p>Selfies sunt Tumblr, delectus small batch DIY umami sint. Polaroid chambray selfies McSweeney's Cosby sweater, Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe. Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore. Dreamcatcher iPhone typewriter, tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually. Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bit distillery anim literally.</p>
+				<a class="next" href="#">Continues...</a>
+			</article>
+
+			<hr>
+
+		</main>
 
 		<aside class="aboutus">
+
+			<div class="aboutus">
+
 			<h5>About us</h5>
 			<p> Sartre's List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro distrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor West Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level. 
 			</p>
-			<a class="more" href="#">More...</a>
-		</aside>
+			<a class="next" href="#">More...</a>
 
-		<hr>
+			<hr>
 
-		<div id="box">Ad</div>
+			<div id="advert">Ad</div>
 
-		<hr>
+			<hr>
 
-		<aside class="popularposts">
 			<h5>Popular Posts</h5>
-			<ul>
+			<ul class="popularposts">
 				<li><a href="#">10 Things Not to Wear on the Red Carpet</a></li>
 				<li><a href="#">Valhalla at The Met Gala</a></li>
 				<li><a href="#">Jeans: To Fray or Not to Fray</a></li>
@@ -69,6 +74,7 @@
 				<li><a href="#">Neighborhoodie Watch</a></li>
 				<li><a href="#">Hair Styles of the Damned</a></li>
 			</ul>
+
 		</aside>
 
 
@@ -89,7 +95,6 @@
 			<p>&copy 2013 Valet Industries, Inc.</p>
 		</footer>
 
-		</div>
 	</div>
 
 </body>
