Homework - Startup Matchmaking - 15%

--- a/homework/Week5/index.html
+++ b/homework/Week5/index.html
@@ -7,8 +7,8 @@
 	<title>Startup Matchmaker</title>
 	<link href='http://fonts.googleapis.com/css?family=Share+Tech|BenchNine:300,400|Sintony|Roboto+Condensed:400,300|Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
+
 
 <body>
 	<div id="wrapper">
@@ -24,9 +24,9 @@
 				</nav>
 			</div>
 
-			<h2>Because two brains <span class="strikethrough">taste</span> <span class="underline">are</span> better than one.</h2>
+			<h2><i>Because two brains <span class="strikethrough">taste</span> <span class="underline">are</span> better than one.</i></h2>
 
-			<img src="https://github.com/szs/FEWD_HK_3/blob/gh-pages/lesson5/solution/startup_matchmaker/images/coworking.jpg?raw=true">
+			<img src=/Users/szs/Code/FEWD_HK_3/lesson5/starter_code/startup_matchmaker/images/coworking.jpg>
 
 			<div id="overlay">
 				<h3>Meet your Match!</h3>
