Example solution for the temp converter

--- a/lesson7/solution/temp_converter/index.html
+++ b/lesson7/solution/temp_converter/index.html
@@ -7,10 +7,15 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<h1>Temperature Converter</h1>
+		<div id="tempConverter">
+			<input id="celsius" value="0"><span>C</span>
+			<input id="farhenheit" value="32"><span>F</span>
+			<button id="convertCelsius">Convert C</button>
+			<button id="convertFarhenheit">Convert F</button>
+		</div>
 
-		<!-- Build your page here, leaving the script tag after all your HTML, but before the </body> tag -->
-
-		<script src="js/main.js"></script>
+	<script src="js/main.js"></script>
 
 	</body>
 </html>
