Homework - Week 5 - Complete

--- a/homework/Week5/index.html
+++ b/homework/Week5/index.html
@@ -12,6 +12,8 @@
 
 <body>
 	<div id="wrapper">
+
+<!-- TOP -->
 		<header>
 			<div class="clear" id="menubar">
 				<h1>Startup Matchmaker</h1>
@@ -23,37 +25,40 @@
 					<a href="#">FIND DEVELOPERS</a>
 				</nav>
 			</div>
-
-			<h2><i>Because two brains <span class="strikethrough">taste</span> <span class="underline">are</span> better than one.</i></h2>
-
-			<img src=/Users/szs/Code/FEWD_HK_3/lesson5/starter_code/startup_matchmaker/images/coworking.jpg>
-
-			<div id="overlay">
-				<h3>Meet your Match!</h3>
-				<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
-				<span>CREATE A PROFILE</span>
-			</div>
 		</header>
 
-		<aside class="clearfix">
+<!-- MID -->
+		<div class="mid">
+			<h2><i>Because two brains <span class="strikethrough">taste</span> <span class="underline">are</span> better than one.</i></h2>
+
+			<div id="overlay">
+				<h3><b>Meet your Match!</b></h3>
+				<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
+				<span><b>CREATE A PROFILE</b></span>
+			</div>
+		</div>
+
+<!-- BOTTOM -->
+		<div class="column">
 			<div>
-				<h4>Create a Profile</h4>
-				<p>Are you a Designer? Developer? Put yourself out there so that others can find you!
+				<h4><b>Create a Profile</b></h4>
+				<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
 				<span>SIGN UP NOW</span>
 			</div>
 
 			<div>
-				<h4>Find a Developer</h4>
+				<h4><b>Find a Developer</b></h4>
 				<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
 				<span>START YOUR SEARCH</span>
 			</div>
 
 			<div>
-				<h4>Find a Designer</h4>
-				<p>Need someone who can make a product intuitive and appealing? Get ready.
+				<h4><b>Find a Designer</b></h4>
+				<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
 				<span>START YOUR SEARCH</span>
 			</div>
-		</aside>
+		</div>
+
 </body>
 
 <footer>
