Boxing media query - lab - complete.

--- a/homework/Week6/carousel_obfuscated/index.html
+++ b/homework/Week6/carousel_obfuscated/index.html
@@ -28,7 +28,8 @@
 			</header> 	
 			<div id="container">
 				<img id="image-to-vote-on" src="images/food1.jpg"> 
-			<div></div>
+			<div>
+			</div>
 				<div id="buttons-wrapper">
 					<form>
 						<button type="button" class="btn" disabled value="back">Back</button>
@@ -43,7 +44,8 @@
 						</select>
 					</form>
 				</div>
-			</div>
+				<p id="final-message"> </>
+			</div> 
 			<footer>
 				
 			</footer>
