--- a/lesson13/class_labs/boxes/index.html
+++ b/lesson13/class_labs/boxes/index.html
@@ -9,11 +9,12 @@
 		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/boxing.css">
+<!-- 		<link rel="stylesheet" href="css/boxing.css"> -->
 
 		<!-- Swtich to different css later -->
-		<!-- <link rel="stylesheet" href="css/boxing-mobile.css"> -->
-		<!-- <link rel="stylesheet" href="css/boxing-media-query.css"> -->
+<!-- 		<link rel="stylesheet" media="screen and (min-width:701px)" href="css/boxing-mobile.css"> -->
+
+		<link rel="stylesheet" href="css/boxing-media-query.css">
 		
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	</head>
